Track downloaded titles using archive+major fixes

--- a/config.ini
+++ b/config.ini
@@ -10,8 +10,8 @@ OUTPUT_DIRECTORY =
 # Use archive file to record downloaded titles.
 # By default, file's metadata is used to keep track of downloaded titles.
 # Use this option to use youtube-dl's archive file option to track titles instead.
-# TODO: Future implementation
-USE_ARCHIVE_FILE = 0
+# To enable, set USE_ARCHIVE = 1
+USE_ARCHIVE = 0
 
 
 # URL_LIST - List of playlists/URLs to sync/download audio from
