Made both archive file and metadata optional, code optimisations

--- a/config.ini
+++ b/config.ini
@@ -8,10 +8,14 @@
 OUTPUT_DIRECTORY =
 
 # Use archive file to record downloaded titles.
-# By default, file's metadata is used to keep track of downloaded titles.
 # Use this option to use youtube-dl's archive file option to track titles instead.
 # To enable, set USE_ARCHIVE = 1
 USE_ARCHIVE = 0
+
+# Use metadata to record downloaded titles.
+# Use this option to keep track of downloaded titles using file's metadata
+# To enable, set USE_ARCHIVE = 1
+USE_METADATA = 0
 
 
 # URL_LIST - List of playlists/URLs to sync/download audio from
