--- a/config.ini
+++ b/config.ini
@@ -32,7 +32,8 @@ URL_LIST = [
                 # "['-e','--example1','Example playlist']::URL::PATH",
            ]
 
-# Download command (--add-metadata is required for now.)
+# Download command
+# -x --print-json -o "$OUTPUT$" $URL$ are mandatory arguments
 DOWNLOAD_COMMAND = youtube-dl -x --print-json --audio-format mp3 --audio-quality 0 --add-metadata --embed-thumbnail -o "$OUTPUT$" $URL$
 
 # File output format
